--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "webpack-react-starter",
+  "name": "react-app-starter",
   "version": "1.0.0",
-  "description": "A starter template for webpack and react",
-  "main": "index.js",
+  "description": "A starter template for react and webpack",
   "scripts": {
     "start": "webpack-dev-server --content-base build/",
     "build": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jkup/webpack-react-starter.git"
+    "url": "git+https://github.com/jkup/react-app-starter.git"
   },
   "keywords": [
     "webpack",
     "react",
-    "starter"
+    "starter",
+    "kit"
   ],
   "author": "Jon Kuperman",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jkup/webpack-react-starter/issues"
+    "url": "https://github.com/jkup/react-app-starter/issues"
   },
-  "homepage": "https://github.com/jkup/webpack-react-starter#readme",
+  "homepage": "https://github.com/jkup/react-app-starter#readme",
   "devDependencies": {
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
